<resources>
    <string name="app_name">SAFER</string>
    <string name="hint_email">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_main_navigate">SAFER</string>
    <string name="title_activity_register">Registrate</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Cerrar Menu</string>
    <string name="nav_header_title">Usuario Uno</string>
    <string name="nav_header_subtitle">Distrito de San Juan de Miraflores</string>
    <string name="nav_header_desc">Cabecera</string>
    <string name="action_settings">Configuracion</string>
    <string name="hint_name">Nombre</string>
    <string name="register">Registrarte</string>
    <string name="hint_address">Dirección</string>
    <string name="link_register">No tienes cuenta? Registrate aqui!</string>
    <string name="action_singOut">Cerrar sesion</string>
    <string name="conditionText">Al registrarme estoy de acuerdo con los Terminos, Condiciones y Politicas de Privacidad de SAFER</string>

    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="publish">PUBLISH</string>
    <string name="publish_comment">Add a comment here</string>
    <string name="no_elements">There isn\'t still any element!</string>
    <string name="no_comments">There isn\'t still any comment!</string>
    <string name="feed_cannot_log_in">Cannot log in.</string>
    <string name="feed_cannot_send_action">Cannot send action.</string>
    <string name="feed_cannot_request_elements">Cannot request elements.</string>
    <string name="feed_error_updating_feed">Error updating feed.</string>
    <string name="user_not_logged">User should be logged in</string>
    <string name="comments_cannot_request_comments">Cannot request comments.</string>
    <string name="comments_cannot_publish_comment">Cannot publish comment.</string>
    <string name="photos_cannot_publish_photo">Cannot publish photo.</string>
    <string name="action_retry">Retry</string>

    <string name="login_disclaimer">Enjoy InstaMaterial right now!</string>

    <string name="menu_logout">Logout</string>


</resources>
